# DU_Analog_Inputs

./: Cargo.toml  LICENSE  README.md  axis_mapping.toml  config.toml  gamecontrollerdb.txt  key_mapping.toml
.github/workflows/: main.yml
Lua Script Snippets/: system.actionStart(YourChoice)  system.flush  system.update  unit.start  unit.tick(control)
autoconfigs/: modified_default_analog_flying_construct.conf
examples/: axis_mapping_targets.txt  gamepad_5axis_mapping.toml  gamepad_6axis_mapping.toml
src/: config_file_handling.rs  gamepad_datastructures.rs  helpers.rs  input_datastructures.rs  main.rs
