[package]
name = "DU_analog_inputs"
version = "1.0.0"
edition = "2021"
authors = ["ZarTaen <zartaen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
enigo = "0.0.14"
spin_sleep = "0.3.7"
keyboard_query = "0.1.0"
humantime = "2.1.0"
stick = "0.12.4"
pasts = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_with  = "1.13.0"
toml = "0.5.9"